[project]
name = "MrMatt"
version = "0.8.1"
description = "Simple rocks-and-diamonds game"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/mrmatt"}
requires-python = ">= 3.12"
dependencies = [
    "chambercourt >= 0.9.18",
]
classifiers = [
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3",
]

[project.scripts]
mrmatt = "mrmatt:main"

[build-system]
requires = [
    "build",
    "setuptools >= 62.3.0",
]

[tool.setuptools]
packages = [
    "mrmatt",
]

[tool.setuptools.package-data]
mrmatt = ["**/*.png", "**/*.wav", "**/*.tmx", "**/*.tsx", "**/*.ttf", "**/*.mo"]

[tool.pyright]
include = ["mrmatt"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.cxfreeze.executables]]
script = "mrmatt/__main__.py"
base = "gui"
icon = "app-icon"
shortcut_name = "MrMatt"
shortcut_dir = "DesktopFolder"

[tool.cxfreeze.build_exe]
include_msvcr = true
